test/oscar/compiler/errors/mutOutsideActor.oscar
def main() => unit = {
	mut int x = 17;
	Println(x);
}
